[package]
name = "get_sns_neuron_accounts"
version = "0.1.0"
edition = "2024"

[dependencies]
ic-nervous-system-common = { path = "../ic/rs/nervous_system/common" }
dfn_core = { path = "../ic/rs/rust_canisters/dfn_core" }
icp-ledger = { path = "../ic/rs/ledger_suite/icp" }
icrc-ledger-agent = { path = "../ic/packages/icrc-ledger-agent" }
tokio = { version = "1.45.0", features = ["full"] }
ic-agent = "0.39"
ic-ledger-types = "0.14"
icrc-ledger-types = { path = "../ic/packages/icrc-ledger-types", version = "0.1.2" }
